floating icon: icon to trash in/out animation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="available_for_hire">Available for hire</string>
     <string name="blog">Blog</string>
     <string name="profile">Profile</string>
+    <string name="trash_icon">trash icon</string>
 </resources>
