--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,8 @@
 <resources>
     <string name="app_name">GitHub Users</string>
-
     <string name="title_activity_user_detail">UserDetailActivity</string>
     <string name="joined_on">"Joined on %s"</string>
     <string name="user_avatar">"GitHub user's picture"</string>
-    <string name="github_logo">GitHub Logo</string>
     <string name="public_repos">Public Repos</string>
     <string name="public_gists">Public Gists</string>
     <string name="followers">Followers</string>
@@ -12,5 +10,8 @@
     <string name="available_for_hire">Available for hire</string>
     <string name="blog">Blog</string>
     <string name="profile">Profile</string>
-    <string name="trash_icon">trash icon</string>
+    <string name="retry">RETRY</string>
+    <string name="error_downloading_more_users">Error downloading more users</string>
+    <string name="error_downloading_users">Error downloading users</string>
+    <string name="error_downloading_users_profile">Error downloading user\'s profile</string>
 </resources>
